# Transmittance2FOM-GenModels

./: .gitignore  README.md  REPORT.md  pyproject.toml
config/: path.py
transmittance2fom_genmodels/notebooks/: Image_genaration.py  Image_generation.ipynb  Image_generation.py  Image_generation_EX3.py  Image_generation_test_EX3.ipynb  PixtoPix.ipynb  data_exploration.ipynb  dataloaderEX4.py  dataset.py  evaluateEX5.ipynb  evaluate_EX5a.ipynb  evaluate_EX5b.ipynb  image2image_model_EX4.py  test.py  test_dataloader.ipynb  test_dataloaderEX4.py
