[tool.poetry]
name = "transmittance2fom-genmodels"
version = "0.1.0"
description = ""
authors = ["floriankark <florian.kark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
h5py = "^3.12.1"
numpy = "1.26.4"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.5"
poetry = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
