[tool.poetry]
name = "transmittance2fom-genmodels"
version = "0.1.0"
description = ""
authors = ["floriankark <florian.kark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
h5py = "^3.12.1"
numpy = "2.2.1"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.5"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.1"
scipy = "^1.15.1"
scikit-image = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
